# actix_friendly_json_extractor

./: Cargo.toml  README.md
src/: lib.rs
